work section added and styled

--- a/index.html
+++ b/index.html
@@ -77,5 +77,66 @@
         <h2 class="work">Work</h2>
       </div>
     </section>
+    <section id="portfolio" class="works">
+      <h1 class="recent_heading">MY RECENT WORK </h1>
+    </section>
+    <section id="About_myself" class="About_myself">
+      <div class="project-container">
+        <div class="image_placeholder"></div>
+        <div class="wrap-container">
+          <h2 class="title_post">Multi-Post Stories</h2>
+          <p class="supporting_text"></p>
+          <ul class="tags">
+            <li class="work_tags">CSS</li>
+            <li class="work_tags">HTML</li>
+            <li class="work_tags">Bootstrap</li>
+            <li class="work_tags">Ruby</li>
+          </ul>
+          <button class="button" type="button">See Project</button>
+        </div>
+      </div>
+      <div class="project-container">
+        <div class="image_placeholder"></div>
+        <div class="wrap-container">
+          <h2 class="title_post">Multi-Post Stories</h2>
+          <p class="supporting_text"></p>
+          <ul class="tags">
+            <li class="work_tags">CSS</li>
+            <li class="work_tags">HTML</li>
+            <li class="work_tags">Bootstrap</li>
+            <li class="work_tags">Ruby</li>
+          </ul>
+          <button class="button" type="button">See Project</button>
+        </div>
+      </div>
+      <div class="project-container">
+        <div class="image_placeholder"></div>
+        <div class="wrap-container">
+          <h2 class="title_post">Multi-Post Stories</h2>
+          <p class="supporting_text"></p>
+          <ul class="tags">
+            <li class="work_tags">CSS</li>
+            <li class="work_tags">HTML</li>
+            <li class="work_tags">Bootstrap</li>
+            <li class="work_tags">Ruby</li>
+          </ul>
+          <button class="button" type="button">See Project</button>
+        </div>
+      </div>
+      <div class="project-container">
+        <div class="image_placeholder"></div>
+        <div class="wrap-container">
+          <h2 class="title_post">Multi-Post Stories</h2>
+          <p class="supporting_text"></p>
+          <ul class="tags">
+            <li class="work_tags">CSS</li>
+            <li class="work_tags">HTML</li>
+            <li class="work_tags">Bootstrap</li>
+            <li class="work_tags">Ruby</li>
+          </ul>
+          <button class="button" type="button">See Project</button>
+        </div>
+      </div>
+    </section>
 </body>
 </html>
