--- a/index.html
+++ b/index.html
@@ -85,11 +85,14 @@
         <div class="image_placeholder"></div>
         <div class="wrap-container">
           <h2 class="title_post">Multi-Post Stories</h2>
-          <p class="supporting_text"></p>
+          <p class="supporting_text">
+            A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s,
+             when an unknown printer took a standard dummy text.
+          </p>
           <ul class="tags">
-            <li class="work_tags">CSS</li>
-            <li class="work_tags">HTML</li>
-            <li class="work_tags">Bootstrap</li>
+            <li class="work_tags">css</li>
+            <li class="work_tags">html</li>
+            <li class="work_tags">bootstrap</li>
             <li class="work_tags">Ruby</li>
           </ul>
           <button class="button" type="button">See Project</button>
@@ -99,11 +102,14 @@
         <div class="image_placeholder"></div>
         <div class="wrap-container">
           <h2 class="title_post">Multi-Post Stories</h2>
-          <p class="supporting_text"></p>
+          <p class="supporting_text">
+            A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a standard dummy text.
+          </p>
           <ul class="tags">
-            <li class="work_tags">CSS</li>
-            <li class="work_tags">HTML</li>
-            <li class="work_tags">Bootstrap</li>
+            <li class="work_tags">css</li>
+            <li class="work_tags">html</li>
+            <li class="work_tags">bootstrap</li>
             <li class="work_tags">Ruby</li>
           </ul>
           <button class="button" type="button">See Project</button>
@@ -113,11 +119,14 @@
         <div class="image_placeholder"></div>
         <div class="wrap-container">
           <h2 class="title_post">Multi-Post Stories</h2>
-          <p class="supporting_text"></p>
+          <p class="supporting_text">
+            A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a standard dummy text.
+          </p>
           <ul class="tags">
-            <li class="work_tags">CSS</li>
-            <li class="work_tags">HTML</li>
-            <li class="work_tags">Bootstrap</li>
+            <li class="work_tags">css</li>
+            <li class="work_tags">html</li>
+            <li class="work_tags">bootstrap</li>
             <li class="work_tags">Ruby</li>
           </ul>
           <button class="button" type="button">See Project</button>
@@ -127,11 +136,13 @@
         <div class="image_placeholder"></div>
         <div class="wrap-container">
           <h2 class="title_post">Multi-Post Stories</h2>
-          <p class="supporting_text"></p>
+          <p class="supporting_text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a standard dummy text.
+          </p>
           <ul class="tags">
-            <li class="work_tags">CSS</li>
-            <li class="work_tags">HTML</li>
-            <li class="work_tags">Bootstrap</li>
+            <li class="work_tags">css</li>
+            <li class="work_tags">html</li>
+            <li class="work_tags">bootstrap</li>
             <li class="work_tags">Ruby</li>
           </ul>
           <button class="button" type="button">See Project</button>
