contact form added and styled

--- a/index.html
+++ b/index.html
@@ -149,5 +149,45 @@
         </div>
       </div>
     </section>
+    <section id="contact" class="contact_form">
+      <div class="contact_text">
+        <h1 class="contact_us">CONTACT US</h1>
+        <p class="description">
+          If you have an application you are interested in developing, a feature
+          that you need built or a project that needs coding. I’d love to help
+          with it
+        </p>
+      </div>
+      <form id="contact_form"
+        class="form_container"
+        action="https://formspree.io/f/xknyvbla"
+        method="POST">
+        <input type="text" id="username" name="username" placeholder="Full Name" maxlength="30"  required/>
+        <input type="email" name="email" id="email" class="email" placeholder="Email address" required />
+        <textarea class="text_area" id="text_area" name="message" placeholder="Enter Text Here" maxlength="500" required ></textarea>
+        <button class="form_button" type="submit">Get in touch</button>
+      </form>
+    </section>
+    <footer class="footer">
+      <ul class="social_media">
+        <li>
+          <a href="#"><img src="./assets/GitHub.png" alt="github" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="./assets/Linkedin.png" alt="linkedin" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="./assets/angellist1.png" alt="angellist" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="./assets/twitter.png" alt="twitter" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="./assets/medium.png" alt="medium" /></a>
+        </li>
+      </ul>
+      <h3 class="my_email">davykk04@gmail.com</h3>
+      <div class="border_line"></div>
+    </footer>
 </body>
 </html>
