Update index and style

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Davis_Portfolio</title>
+  <title>Davis Katana Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header id="Portfolio_header">
     <nav class="navbar">
       <a class="logo" href="#">Davis Nyale</a>
       <img id="hamburger_menu" class="menu" src="./assets/Menu.png" alt="menu"/>
