HTML file edited

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   <header>
     <nav class="navbar">
       <a class="logo" href="#">Davis Nyale</a>
+      <ul class="nav_menu">
+        <li>Portfolio</li>
+        <li>About</li>
+        <li>contact</li>
+        <li><img src="./assets/envelope.png" alt="envelope"/></li>
+      </ul>
       <img id="hamburger_menu" class="menu" src="./assets/Menu.png" alt="menu"/>
     </nav>
   </header>
@@ -78,7 +84,7 @@
       </div>
     </section>
     <section id="portfolio" class="works">
-      <h1 class="recent_heading">MY RECENT WORK </h1>
+      <h1 class="recent_heading"><span>M</span>Y RECENT WORK </h1>
     </section>
     <section id="About_myself" class="About_myself">
       <div class="project-container">
