--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
       </div>
     </section>
     <section class="social_media_container">
+      <div class="work_box2">
+        <h2>Work</h2>
+        <img src="./assets/downarrow.svg" alt="downarrow" />
+      </div>
       <ul class="social_media">
         <li>
           <a href="#"><img src="./assets/GitHub.png" alt="github" /></a>
@@ -89,7 +93,7 @@
     <section id="About_myself" class="About_myself">
       <div class="project-container">
         <div class="image_placeholder"></div>
-        <div class="wrap-container">
+        <div class="wrap-container1">
           <h2 class="title_post">Multi-Post Stories</h2>
           <p class="supporting_text">
             A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s,
@@ -106,7 +110,7 @@
       </div>
       <div class="project-container">
         <div class="image_placeholder"></div>
-        <div class="wrap-container">
+        <div class="wrap-container2">
           <h2 class="title_post">Multi-Post Stories</h2>
           <p class="supporting_text">
             A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, 
@@ -123,7 +127,7 @@
       </div>
       <div class="project-container">
         <div class="image_placeholder"></div>
-        <div class="wrap-container">
+        <div class="wrap-container1">
           <h2 class="title_post">Multi-Post Stories</h2>
           <p class="supporting_text">
             A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, 
@@ -140,7 +144,7 @@
       </div>
       <div class="project-container">
         <div class="image_placeholder"></div>
-        <div class="wrap-container">
+        <div class="wrap-container2">
           <h2 class="title_post">Multi-Post Stories</h2>
           <p class="supporting_text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, 
             when an unknown printer took a standard dummy text.
@@ -158,6 +162,7 @@
     <section id="contact" class="contact_form">
       <div class="contact_text">
         <h1 class="contact_us">CONTACT US</h1>
+        <h1 class="contact_desktop">Let's Chat!</h1>
         <p class="description">
           If you have an application you are interested in developing, a feature
           that you need built or a project that needs coding. I’d love to help
