change alt message for mail icon

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li>Portfolio</li>
         <li>About</li>
         <li>contact</li>
-        <li><img src="./assets/envelope.png" alt="envelope"/></li>
+        <li><img src="./assets/envelope.png" alt="mail_icon"/></li>
       </ul>
       <img id="hamburger_menu" class="menu" src="./assets/Menu.png" alt="menu"/>
     </nav>
