added main tag to the main body

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <img id="hamburger_menu" class="menu" src="./assets/Menu.png" alt="menu"/>
     </nav>
   </header>
+  <main>
     <section id="About" class="headline">
       <h1 class="myname">Davis Nyale</h1>
       <h2 class="subtitle">Software Developer</h2>
@@ -179,6 +180,7 @@
         <button class="form_button" type="submit">Get in touch</button>
       </form>
     </section>
+  </main>
     <footer class="footer">
       <ul class="social_media">
         <li>
