Linter files for JS added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Davis_Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet"
+  />
 </head>
 <body>
   <header>
@@ -202,5 +208,6 @@
       <h3 class="my_email">davykk04@gmail.com</h3>
       <div class="border_line"></div>
     </footer>
+    <script type="module" src="./javascript/script.js"></script>
 </body>
 </html>
