HTML file added and style DOM added with JS

--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
         <li><img src="./assets/envelope.png" alt="mail_icon"/></li>
       </ul>
       <img id="hamburger_menu" class="menu" src="./assets/Menu.png" alt="menu"/>
+      <div id="menu_mobile" class="menu_mobile">
+        <div id="close_button" class="img">
+          <img src="./assets/Enabled_button.png" alt="X-button">
+        </div>
+        <div class="portfolio_container">
+          <span><a href="#portfolio">Portfolio</a></span>
+          <img src="./assets/arror_right.png" alt="arrow">
+        </div>
+        <div class="about_container">
+          <span><a href="#About">About</a></span>
+          <img src="./assets/arror_right.png" alt="arrow">
+        </div>
+        <div class="contact_container">
+          <span><a href="#contact">Contact</a></span>
+          <img src="./assets/arror_right.png" alt="arrow">
+        </div>
+      </div>
     </nav>
   </header>
   <main>
