popup files added in HTML and CSS

--- a/index.html
+++ b/index.html
@@ -43,6 +43,42 @@
     </nav>
   </header>
   <main>
+    <section id="popup_window" class="popupwindow">
+      <div class="background_popup">
+      <div class="popup_window">
+      <div class="top_title">
+        <h1 class="h_tag" id="title-popup">Multi-Post stories</h1>
+        <img id="close_popup" src="./assets/Enabled_button.png" alt="X-button">
+      </div>
+      <div class="photo">
+        <img class="desktopVersion" src="./assets/Snapshoot_Portfolio_ds.svg" alt="picture">
+      </div>
+      <p class="portfolio_para" id="text-popup">
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it 1960s
+        with the releaLorem Ipsum is simply dummy text of the printing and typesetting  
+        ever since the 1500s,
+        when an unknown printer took a galley of type veris lapoa todoe.
+      </p>
+      <ul class="unordered_list" id="tags-popup">
+        <li class="html1">html</li>
+        <li class="ruby1">Ruby on Rails</li>
+        <li class="css1">css</li>
+      </ul>
+      <div class="popup_buttons">
+      <button class="button1" type="button">
+        <img src="./assets/Icon_Export.png" alt="export">
+        <span>See live</span>
+      </button>
+      <button class="button2" type="button">
+        <img src="./assets/GitHub.png" alt="github">
+        <span>See Source</span>
+      </button>
+      </div>
+      </div>
+      </div>
+    </section>
     <section id="About" class="headline">
       <h1 class="myname">Davis Nyale</h1>
       <h2 class="subtitle">Software Developer</h2>
@@ -225,5 +261,6 @@
       <div class="border_line"></div>
     </footer>
     <script type="module" src="./javascript/script.js"></script>
+    <script type="module" src="./javascript/data.js"></script>
 </body>
 </html>
